<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    android:orientation="vertical"
    tools:context=".PasswordCreator">

    <CheckBox
        android:id="@+id/numberState"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/number"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="2dp"/>

    <CheckBox
        android:id="@+id/upperCaseState"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upper_case"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="2dp"/>

    <CheckBox
        android:id="@+id/lowerCaseState"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lower_case"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="2dp"/>

    <CheckBox
        android:id="@+id/symbolState"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/symbol"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="2dp"/>

    <LinearLayout
        android:layout_width="421dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginRight="2dp"
        android:layout_marginLeft="2dp"
        >
        <SeekBar
            android:id="@+id/passLength"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:max="50"
            android:layout_marginRight="10dp"/>

        <TextView
            android:id="@+id/passLengthValue"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:text="5"
            android:layout_marginLeft="10dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/createPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:text="@string/create"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        />

    <TextView
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Password"
        android:textSize="20dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"/>


</LinearLayout>