<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NumberCreator"
    android:background="@drawable/main_background"
    android:orientation="vertical">

    <EditText
        android:id="@+id/minNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/min_number"

        />
    <EditText
        android:id="@+id/maxNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/max_number"
        />
    <Button
        android:id="@+id/createNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:background="@drawable/button"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        />
    <TextView
        android:id="@+id/number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="NUMBER" />
</LinearLayout>